--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "aws-sdk": "^2.2.39",
     "browserify": "^13.0.0",
     "canvas": "git+https://github.com/chearon/node-canvas.git#12971f64a66b",
+    "canvas-prebuilt": "^2.0.0-alpha.2",
     "compression": "^1.6.1",
     "d3": "^4.1.1",
     "dotenv": "^2.0.0",
